# websocket-gateway

./: README.md
gateserver/: CMakeLists.txt  GateInnerServer.cpp  GateInnerServer.h  GateInnerServerlogic.cpp  GateInnerServerlogic.h  GateInner_info.h  GateServer_websocket.cpp  GateServer_websocket.h  Gate_info.cpp  Gate_info.h  HandleInnermsgthread.cpp  HandleInnermsgthread.h  Handleoutmsgthread.cpp  Handleoutmsgthread.h  Makefile
include/: MultiSequenceAnalysis.h  MyEncrypt.h  TcpMsgStr.h  random.h  tcpclientfunction.h  tcpservervirfunciton.h
include/public/: CMakeLists.txt  Makefile  SpecilString.h  config.h  configpars.h  log.h  mongoose.h  publicthread.h  typedef.h
include/public/json/: json.h
include/public/share/: event.h  function.h  singleton.h  smartptr.h
netbase/: Makefile
netbase/include/: tcpclientfunction.h  tcpservervirfunciton.h
netbase/sys/: SYSatomiccount.h  SYSnotify.cpp  SYSnotify.h  SYSthread.cpp  SYSthread.h  SYSthreadmutex.h  SYStimerecord.cpp  SYStimerecord.h  common.h
netbase/tcpbase/: tcpbaseconnect.cpp  tcpbaseconnect.h  tcpbasethread.cpp  tcpbasethread.h  tcpbasevariable.h
netbase/tcplower/clientlower/: tcpactiveconnectlower.cpp  tcpactiveconnectlower.h  tcpclientcreatorlower.cpp  tcpclientcreatorlower.h  tcpclientlower.cpp  tcpclientlower.h  tcpreconnectthreadlower.cpp  tcpreconnectthreadlower.h
netbase/tcplower/serverlower/: tcpacceptconnectlower.cpp  tcpacceptconnectlower.h  tcpacceptthreadlower.cpp  tcpacceptthreadlower.h  tcpconnectpoollower.cpp  tcpconnectpoollower.h  tcpserverlower.cpp  tcpserverlower.h
